* type=diff | only avoid display of whitespaces in DIFF for xpath */certificate/ if flag is set
* type=rule-merger | improvements if DENY rules are found between possible rule for merging
* type=diff | introduce more options for 'filter=file.json' - 'combinedruleordercheck'

BUGFIX:
* type=rule-merger | bugfix if argument exportcsv=xyz projectfolder=xyz and rules are skipped - to create skipped output file correctly
* class ReferenceableObject | bugfix for - type=rule 'filter=(reflocation is.only DGNAME)'
* type=address | bugfix for 'filter=(reflocation is DGNAME)' if multiple reflocation are used
* class RULE.php method load_common_from_domxml() | bugfix to NOT set reference for group-tag - fix problems with tag-merger
* class SecurityRule | bugfix for qos -> marking
* type=playbook | bugfix for new php version - missing variable declaration

GENERAL
* update js and json file for bash_completion
* type=rule | update filter description for 'filter=(timestamp-first-hit.fast/timestamp-last-hit.fast <,>,= VALUE)' as of a PHP v7 handling problem
* update license info | introduce new migration scripts for different vendors, under tag develop
* develop | migration pulse - introduce rule-merging functionality only for pulse migration - should be general available


2.0.65 (20221215)
UTIL:
* type=rule | introduce 'filter=(hit-count.fast >,<,=,! VALUE)'
* type=device | now support for Fawkes config snippet

BUGFIX:
type=rule 'filter=(timestamp.last-hit.fast = 0)' bugfix to avoid error out
type=rule 'filter=(timestamp-last-hit.fast < 10/01/2021)' | bugfix to not show rules which are unused

GENERAL
* update to Palo Alto Networks content version 8648-7733


2.0.64 (20221203)
UTIL:
* type=xml-issue | improve counting for applicationgroup/customurl fixes
* type=address | improvement for actions=name-rename
* type=address | introduce new 'actions=value-replace:SEARCH,REPLACE'